# cpp115final

./: .gitignore  AGENTS.md  Architecture.md  CMakeLists.txt  README.md  diagram.md  plan.md
include/: account.h  app.h  entry.h  search.h  storage.h  ui.h
openspec/: spec.md
src/: account.cpp  app.cpp  entry.cpp  main.cpp  search.cpp  storage.cpp  ui.cpp
tests/: tests.cpp
